v11/docs/ModelsEnrollmentAvailableRenewal.md
# ModelsEnrollmentAvailableRenewal

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**AvailableRenewalType** | Pointer to **int32** |  | [optional] 
**Message** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsEnrollmentAvailableRenewal

`func NewModelsEnrollmentAvailableRenewal() *ModelsEnrollmentAvailableRenewal`

NewModelsEnrollmentAvailableRenewal instantiates a new ModelsEnrollmentAvailableRenewal object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsEnrollmentAvailableRenewalWithDefaults

`func NewModelsEnrollmentAvailableRenewalWithDefaults() *ModelsEnrollmentAvailableRenewal`

NewModelsEnrollmentAvailableRenewalWithDefaults instantiates a new ModelsEnrollmentAvailableRenewal object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetAvailableRenewalType

`func (o *ModelsEnrollmentAvailableRenewal) GetAvailableRenewalType() int32`

GetAvailableRenewalType returns the AvailableRenewalType field if non-nil, zero value otherwise.

### GetAvailableRenewalTypeOk

`func (o *ModelsEnrollmentAvailableRenewal) GetAvailableRenewalTypeOk() (*int32, bool)`

GetAvailableRenewalTypeOk returns a tuple with the AvailableRenewalType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetAvailableRenewalType

`func (o *ModelsEnrollmentAvailableRenewal) SetAvailableRenewalType(v int32)`

SetAvailableRenewalType sets AvailableRenewalType field to given value.

### HasAvailableRenewalType

`func (o *ModelsEnrollmentAvailableRenewal) HasAvailableRenewalType() bool`

HasAvailableRenewalType returns a boolean if a field has been set.

### GetMessage

`func (o *ModelsEnrollmentAvailableRenewal) GetMessage() string`

GetMessage returns the Message field if non-nil, zero value otherwise.

### GetMessageOk

`func (o *ModelsEnrollmentAvailableRenewal) GetMessageOk() (*string, bool)`

GetMessageOk returns a tuple with the Message field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetMessage

`func (o *ModelsEnrollmentAvailableRenewal) SetMessage(v string)`

SetMessage sets Message field to given value.

### HasMessage

`func (o *ModelsEnrollmentAvailableRenewal) HasMessage() bool`

HasMessage returns a boolean if a field has been set.

### SetMessageNil

`func (o *ModelsEnrollmentAvailableRenewal) SetMessageNil(b bool)`

 SetMessageNil sets the value for Message to be an explicit nil

### UnsetMessage
`func (o *ModelsEnrollmentAvailableRenewal) UnsetMessage()`

UnsetMessage ensures that no value is present for Message, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


